--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
     color: mediumpurple;
     text-decoration: underline;
 }
+
+body {
+    background-image: url("images/cottoncandy.jpeg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
