--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     background-image: url("images/coolpic.png");
     height: 100%;
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Titillium Web', sans-serif;
 
@@ -15,6 +14,10 @@ body {
 
 h1 {
 text-align: center;
+}
+
+ol {
+    list-style: lower-roman;
 }
 
 ul {
@@ -31,10 +34,27 @@ ul {
     padding: 2px;
     text-align: center;
     font-size: xx-large;
+    font-family: "Comic Sans MS";
 }
 
 #user-table td {
     padding: 2px;
     text-align: center;
 
+}
+
+a:link {
+    color: blue;
+}
+
+a:visited {
+    color: steelblue;
+}
+
+a:hover {
+    color: aqua;
+}
+
+a:active {
+    color: plum;
 }
