--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+.header {
+    font-family: 'Courgette', cursive;
+    text-decoration: underline;
+}
+
+#scene {
+    background-image: url("../images/future.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+
+}
+
+#bottom {
+    background-image: url("../images/tidie.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
 #main-header:hover {
     color: deeppink;
 }
@@ -11,7 +29,7 @@
 }
 
 #header-3:hover {
-    color: seagreen;
+    color: darkorange;
 }
 
 #vision:hover {
@@ -22,12 +40,8 @@
     color: orchid;
 }
 
-.fancy-header {
-    color: royalblue;
-    text-decoration: underline;
-}
-
 body {
+    font-size: large;
     background-image: url("../images/cottoncandy.jpeg");
     height: 100%;
     background-position: center;
