--- a/css/twitter.css
+++ b/css/twitter.css
@@ -28,8 +28,8 @@ a {
 }
 .top-nav {
     background: var(--light-bg);
-    position: fixed;
     width: 100%;
+    z-index: 1000;
 }
 .nav {
     list-style-type: none;
@@ -54,6 +54,7 @@ a {
 .profile {
     background: var(--light-bg);
     height: 80px;
+    line-height: 80px;
 }
 
 .profile-image {
@@ -62,6 +63,54 @@ a {
 
 .profile-form {
     line-height: 80px;
+}
+
+.profile-details {
+    margin: 0em .5em;
+    float: left;
+}
+
+.profile-items {
+    padding: 0;
+    list-style: none;
+}
+
+.profile-entry {
+    margin: .5em;
+    float: left;
+}
+
+.timeline {
+    margin: 0em .5em;
+}
+
+.who-to-follow {
+    margin: 0em .5em;
+    float: left;
+}
+
+.container {
+
+}
+
+.media {
+    width: 100%;
+    background-color: lightblue;
+    border-bottom: 1px solid black;
+    padding: .5em;
+    overflow: auto;
+}
+
+.media-image {
+    max-width: 50px;
+    float: left;
+    margin-top: 1.33em;
+}
+
+.media-body {
+    float: left;
+    width: 100%;
+    width: calc(100% - 20%);
 }
 
 .btn {
