--- a/css/twitter.css
+++ b/css/twitter.css
@@ -66,6 +66,7 @@ a {
 }
 
 .profile-details {
+    width: calc(25% - .5em);
     margin: 0em .5em;
     float: left;
 }
@@ -81,10 +82,12 @@ a {
 }
 
 .timeline {
+    width: calc(50% - .5em);
     margin: 0em .5em;
 }
 
 .who-to-follow {
+    width: calc(25% - .5em);
     margin: 0em .5em;
     float: left;
 }
