--- a/css/login.css
+++ b/css/login.css
@@ -31,14 +31,15 @@ fieldset {
 
 .width-80 {
     width: 80%;
-    margin: 0 auto;
+    margin: auto;
     /* The element with this class should 80% of the width and it must be centered */
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
 }
 
 .form-group {
     width: 100%;
-    padding: .5em 0em;
+    margin-top: .5em;
+    margin-bottom: .5em;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
@@ -49,8 +50,11 @@ fieldset {
 }
 
 .form-control {
-    height: 4px 0px;
-    padding: .5em 0em;
+    height: 16px;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    padding-top: 4px;
+    padding-bottom: 4px;
     /* There must be 4px on top of the text and below the text of an input with this class */
     /* It should have a separation of .5em from elements on top of it and below it */
 
@@ -58,7 +62,7 @@ fieldset {
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: calc(100% - 92px);
+    width: calc(100% - .5em);
 }
 
 .btn {
