--- a/css/login.css
+++ b/css/login.css
@@ -31,7 +31,7 @@ fieldset {
 
 .width-80 {
     width: 80%;
-    margin: auto;
+    margin: 0 auto;
     /* The element with this class should 80% of the width and it must be centered */
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
 }
@@ -50,19 +50,17 @@ fieldset {
 }
 
 .form-control {
-    height: 16px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    padding-top: 4px;
-    padding-bottom: 4px;
+
     /* There must be 4px on top of the text and below the text of an input with this class */
+    padding: 4px 0;
     /* It should have a separation of .5em from elements on top of it and below it */
+    margin: .5em 0;
 
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: calc(100% - .5em);
+    width: calc(100% - 4px);
 }
 
 .btn {
