--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -46,35 +46,46 @@ h2, h3 {
 
 section {
     /* enter needed declarations here */
+    display: flex;
+    justify-content: space-between;
 }
 
 section:nth-of-type(1) {
     height: 3em;
     background: lightgreen;
+    align-items: center;
+    margin-bottom: 10px;
     /* enter needed declarations here */
 }
 section:nth-of-type(1) div:last-child {
     /* enter needed declarations here */
+    align-self: end;
 }
 
 .purple-box {
     background: fuchsia;
     width: 3em;
     height: 1em;
+    flex-direction: row;
+    margin-bottom: 15px;
 }
 
 .purple-box:nth-of-type(1) {
     /* enter needed declarations here */
+    flex-grow: 5;
 }
 
 .purple-box:nth-of-type(2) {
     /* enter needed declarations here */
+    flex-grow: 3;
+
 }
 
 .blue-box {
     width: 100%;
     background: blue;
     height: 10em;
+    margin-bottom: 15px;
 }
 
 section:nth-of-type(3) {
@@ -98,6 +109,7 @@ section:nth-of-type(3) h3 {
     height: 5em;
     width: 5em;
     background: brown;
+    margin-bottom: 15px;
     /* enter needed declarations here */
 }
 
@@ -113,6 +125,7 @@ section:nth-of-type(5) {
     background: yellow;
     width: 2em;
     height: 2em;
+    margin-bottom: 15px;
 }
 
 section:nth-of-type(6) {
@@ -125,7 +138,7 @@ section:nth-of-type(6) {
     background: grey;
     width: 3em;
     height: 3em;
-    flex-wrap: wrap;\
+    flex-wrap: wrap;
 }
 
 .grey-box:nth-of-type(odd) {
