--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -21,8 +21,6 @@ body {
 .cover {
     height: 100vh;
     width: 100%;
-    justify-content: center;
-    align-items: center;
 
 }
 
@@ -31,7 +29,6 @@ body {
     position: relative;
     border:20px solid rgba(0,0,0,0.3);
     border-radius:5px;
-    display: flex;
 }
 
 .flex-form > * {
@@ -59,12 +56,14 @@ body {
 .cover {
     display: flex;
     /* flex container */
+    justify-content: center;
+    align-items: center;
 }
 .flex-form {
     /* flex items */
-    flex-grow: .1
+    display: flex;
 }
 .destination {
     /* bigger item */
-    flex-grow: 1;
+    flex-basis: 30%;
 }
