--- a/css/mondrian.css
+++ b/css/mondrian.css
@@ -7,33 +7,65 @@ body {
 }
 main {
     margin-top: 2em;
-    background: lightgreen;
+    background: gray;
     display: inline-grid;
-    width: 600px;
-    height: 600px;
-    grid-template-areas:
-            "red red green"
-            "blue blue blue"
-            "blue blue blue";
+    width: 500px;
+    height: 500px;
+    grid-template-rows: 66px 66px 66px 66px 66px 66px 66px 66px;
+    grid-template-columns: 66px 66px 66px 66px 66px 66px 66px 66px;
 }
 main div {
-    font-size: 2em;
-    color: black;
     background: grey;
-    border: 1px solid black; /* thin out border to 1px */
+    border: 4px solid black; /* thin out border to 1px */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .red {
-    grid-area: red;
-    background: lightcoral;
+    grid-area: 1 / 3 / 4 / 10;
+    background: #DC1B21;
 }
+
+.drkred {
+    grid-area: 8 / 1 / 11 / 3 ;
+    background: #DD1B21;
+}
+
 .green {
-    grid-area: green;
+    grid-area: 3 / 1 / 6 / 3;
     background: lightgreen;
 }
 .blue {
-    grid-area: blue;
-    background: lightblue;
+    grid-area: 1 / 1 / 3 / 3;
+    background: #30447A;
+}
+
+.drkblue {
+    grid-area: 8 / 3 / 10 / 10;
+    background: #2b3e7a;
+}
+
+.white {
+    grid-area: 6 / 1 / 8 / 3;
+    background: #FFFFFF;
+}
+
+.white2 {
+    grid-area: 4 / 3 / 8 / 5;
+    background: #FEFDFF;
+}
+
+.white3 {
+    grid-area: 4 / 5 / 6 / 10;
+    background: #FBFFFD;
+}
+
+.yellow {
+    grid-area: 3 / 1 / 6 / 3 ;
+    background: #FCCC09;
+}
+
+.yellow2 {
+    grid-area: 6 / 5/ 8 / 10;
+    background: #FCD109;
 }
