--- a/css/generic-web-layout.css
+++ b/css/generic-web-layout.css
@@ -5,9 +5,10 @@
 
 body {
     display: grid;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     grid-template-columns: 18% 50% 30%;
-    grid-template-rows: 50px repeat(5, 400px);
+    grid-template-rows: 50px repeat(5, 300px);
     font-family: 'Roboto', sans-serif;
     grid-row-gap: 25px;
 }
@@ -17,7 +18,7 @@ main {
     grid-template-rows: repeat(6, 150px);
     /*justify-content: center;*/
     /*align-items: center;*/
-    height: 800px;
+    height: 100vh;
     width: 100%;
     grid-area: 2 / 2 / 3 / 3;
 
@@ -26,7 +27,7 @@ main {
 header {
     display: flex;
     width: 100%;
-    grid-area: 1 / 1 / 2 / 4;
+    grid-area: 1 / 1 / 2 / 5;
 }
 
 nav {
@@ -75,7 +76,7 @@ nav a:hover {
     grid-area: 1 / 1 / 2 / 2;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 2px dotted grey;
 }
 
 .two {
@@ -83,7 +84,7 @@ nav a:hover {
     grid-area: 2 / 1 / 4 / 2;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 2px dotted grey;
 }
 
 .ads2 {
@@ -99,7 +100,7 @@ nav a:hover {
     grid-area: 1 / 1 / 2 / 2;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 2px dotted grey;
 }
 
 .four {
@@ -107,7 +108,7 @@ nav a:hover {
     grid-area: 2 / 1 / 4 / 2;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 2px dotted grey;
 }
 
 .ads3 {
@@ -123,7 +124,7 @@ nav a:hover {
     grid-area: 1 / 1 / 2 / 2;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border: 2px dotted grey;
 }
 
 .six {
@@ -131,7 +132,14 @@ nav a:hover {
     grid-area: 2 / 1 / 4 / 2;
     justify-content: center;
     align-items: center;
-    border: 2px blue;
+    border: 2px dotted grey;
+}
+
+body .ad1 {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 1fr;
+    grid-area: 6 / 2 / 7 / 4;
 }
 
  #top {
