--- a/css/generic-web-layout.css
+++ b/css/generic-web-layout.css
@@ -3,26 +3,18 @@
     margin: 0;
 }
 
+/*body has a grid for the main layout of the page*/
+
 body {
     display: grid;
     width: 100vw;
     height: 100vh;
-    grid-template-columns: 18% 50% 30%;
+    grid-template-columns: 15% 50% 35%;
     grid-template-rows: 50px repeat(5, 300px);
     font-family: 'Roboto', sans-serif;
     grid-row-gap: 25px;
 }
 
-main {
-    display: grid;
-    grid-template-rows: repeat(6, 150px);
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    height: 100vh;
-    width: 100%;
-    grid-area: 2 / 2 / 3 / 3;
-
-}
 
 header {
     display: flex;
@@ -135,15 +127,55 @@ nav a:hover {
     border: 2px dotted grey;
 }
 
-body .ad1 {
-    display: grid;
+.ad1 {
+    display: inline-grid;
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: 1fr;
     grid-area: 6 / 2 / 7 / 4;
+
+}
+
+#pages {
+    display: flex;
+    grid-area: 1 / 1 / 3 / 2;
+    align-items: center;
+    justify-content: center;
+}
+
+#uno {
+    background: black;
+    color: white;
+    line-height: 50px;
+}
+
+#pages span {
+    padding: 0 25px 0 25px;
+}
+
+#foot {
+    grid-area: 3 / 1 / 5 / 2;
+    background: #666666;
+    color: #ffffff;
+    padding-top: 50px;
+    padding-left: 10px;
+    font-size: larger;
+    z-index: -2;
+}
+
+#power {
+    grid-area: 5 / 1 / 6 / 2;
+    background: #333333;
+    color: #ffffff;
+    padding-top: 25px;
+    padding-left: 10px;
+    font-family: 'Titillium Web', sans-serif;
+    z-index: -2;
+
 }
 
  #top {
     grid-area: 2 / 2 / 3 / 3;
+     padding: 25px 25px;
 }
 
  #top h1 {
@@ -161,6 +193,7 @@ body .ad1 {
 
 #mid {
     grid-area: 3 / 2 / 4 / 3;
+    padding: 25px 25px;
 }
 
 #mid p {
@@ -177,6 +210,7 @@ body .ad1 {
 
 #bottom {
     grid-area: 4 / 2 / 5 / 3;
+    padding: 25px 25px;
 }
 
 #bottom p {
@@ -193,7 +227,7 @@ body .ad1 {
 
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 240px; /* Set the width of the sidebar */
+    width: 245px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: -1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -205,7 +239,7 @@ body .ad1 {
 
 /* The navigation menu links */
 .sidenav a {
-    padding: 20px 6px 16px;
+    padding: 20px 6px 17px;
     text-decoration: none;
     font-size: 25px;
     color: black;
@@ -217,11 +251,6 @@ body .ad1 {
     color: #f1f1f1;
 }
 
-/* Style page content */
-.main {
-    margin-left: 240px; /* Same as the width of the sidebar */
-    padding: 0 10px;
-}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 /*@media screen and (max-height: 450px) {*/
