--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -31,10 +31,21 @@ h1 {
     justify-content: center;
     align-content: center;
     padding: 2em 0;
+    height: auto;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .main {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(4, 1fr);
+}
+
+.main p {
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.sub-section>h2 {
+    grid-area: 1 / 4 / 2 / 5;
 }
